# getbidsfile

./: README.md  setup.cfg
getbidsfile/: __main__.py
